--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "ejs": "^1.0.0",
-    "promise": "^5.0.0"
+    "nconf": "^0.6.9",
+    "promise": "^5.0.0",
+    "walkdir": "0.0.7"
   }
 }
