--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.1",
   "description": "A simple local judge system for OI on Windows / Linux / OS X, in order to take place of Cena.",
   "main": "main.html",
+  "single-instance": true,
   "author": "Lequn Chen",
   "license": "MIT",
+  "window": {
+    "min_width": 790,
+    "min_height": 400,
+    "width": 960,
+    "height": 640,
+    "position": "mouse"
+  },
   "dependencies": {
     "ejs": "^1.0.0",
     "nconf": "^0.6.9",
