--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "ejs": "^1.0.0",
+    "fs-extra": "^0.11.1",
     "nconf": "^0.6.9",
     "node-uuid": "^1.4.1",
     "promise": "^5.0.0",
